syntax = "proto3";

option csharp_namespace = "Seedly";
package main;

service Seedly {
  rpc GetUpdateStream (DownloadRequest) returns (stream Update);
  rpc GetTorrentInfo (InfoRequest) returns (InfoResponse);
}

message DownloadRequest {
  string url = 1;
  string outfile = 2;
}

message Update {
  float progressInt = 1;
}

message InfoRequest{
	string url = 1;
}

message InfoResponse{
	string files = 1;
	string name = 2;
}